# synclyr2metadata-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  fs_util.rs  http_client.rs  json.rs  lidarr.rs  logger.rs  lrclib.rs  main.rs  sync.rs  types.rs
src/metadata/: flac.rs  id3v2.rs  mod.rs  mp4.rs  ogg.rs
