[package]
name = "synclyr2metadata-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Embed LRCLIB synced lyrics into audio file metadata (Rust rewrite)"
license = "GPL-3.0"

[[bin]]
name = "synclyr2metadata-rs"
path = "src/main.rs"

# Minimal dependency tree:
#   rustls         — pure-Rust TLS 1.2/1.3 (no OpenSSL)
#   webpki-roots   — Mozilla CA bundle embedded at compile time
#
# Everything else (HTTP/1.1 client, JSON parser, audio tag readers/writers
# for FLAC/MP3/OGG/MP4) is implemented by hand in this crate.
[dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std", "logging"] }
webpki-roots = "0.26"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
